--- a/about.html
+++ b/about.html
@@ -7,15 +7,7 @@
     <title>WeatherNews App</title>
   </head>
   <body>
-    <header>
-      <img class="logo" src="NewsImages/News_Icons.png" />
-      <h1>WeatherNews</h1>
-    </header>
-    <nav class="Line">
-      <ul>
-        <li class="barList"></li>
-      </ul>
-    </nav>
+    <header></header>
     <footer>
       <p>
         2026 / Hailee Payeur
