Setting Up Lists

--- a/funfacts.html
+++ b/funfacts.html
@@ -7,7 +7,25 @@
     <title>WeatherNews App</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <img class="logo" src="NewsImages/News_Icons.png" />
+      <h1>WeatherNews</h1>
+    </header>
+    <section class="banner">
+      <img src="NewsImages/Weather_Banner.jpeg" alt="banner" />
+      <div class="welcome">
+        <h2>Welcome to the WeatherNews App.</h2>
+      </div>
+    </section>
+    <nav class="Line">
+      <ul>
+        <li class="barList">
+          <a href="index.html" class="home"> Home </a>
+        </li>
+        <li><a href="news.html" class="News"> News </a></li>
+        <li><a href="about.html" class="aboutus">About Us! </a></li>
+      </ul>
+    </nav>
     <footer>
       <p>
         2026 / Hailee Payeur
