--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         <li><a href="about.html" class="aboutus">About Us! </a></li>
       </ul>
     </nav>
+    <main>
+      <article>
+        <h3>Welcome to the Weather News!</h3>
+        <p>
+          This Website is full of fun and fascinating information about our
+          crazy Weather. We've got Crazy, Interesting, thrilling, and Indulging
+          Stories. Told by real people and scientists alike. We've even have
+          some interesting Fun facts that will have you buzzing to learn more
+          about our bazar and rapid changing weather. Followed by more
+          information about us so you can learn more. So enjoy and explore our
+          fascinating website!
+        </p>
+      </article>
+    </main>
     <footer>
       <p>
         2026 / Hailee Payeur
@@ -33,7 +47,7 @@
           >Tooele Technical College</a
         >
         <br />
-        Last Updated: Tue Jan 13, 2026
+        Last Updated: Tue Jan 14, 2026
       </p>
     </footer>
   </body>
